add: 授業登録を修正
